--- a/shop-grid.html
+++ b/shop-grid.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Ogani, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Ogani | Template</title>
+    <title>Agri products | Shop</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;900&display=swap" rel="stylesheet">
@@ -528,14 +528,16 @@
                             </div>
                         </div>
                     </div>
-                    <div class="filter__item">
+                    <div class="filter__item" >
                         <div class="row">
                             <div class="col-lg-4 col-md-5">
                                 <div class="filter__sort">
                                     <span>Sort By</span>
                                     <select>
-                                        <option value="0">Default</option>
-                                        <option value="0">Default</option>
+                                        <option>Default</option>
+                                        <option>Price</option>
+                                        <option>Date Ascending</option>
+                                        <option>Date Descending</option>
                                     </select>
                                 </div>
                             </div>
@@ -551,11 +553,18 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="row">
+                            <div class="col-lg-6 col-md-6 form-group">
+                                <input type="text" class="form-control" style="border-radius: 50px"
+                                       placeholder="Enter seller name" ng-model="sellerName" id="filter">
+                            </div>
+                        </div>
+
                     </div>
-                    <div class="row">
+                    <div class="row" ng-init="viewProducts()">
                         <div class="col-lg-4 col-md-6 col-sm-6">
-                            <div class="product__item">
-                                <div class="product__item__pic set-bg" data-setbg="img/product/product-1.jpg">
+                            <div class="product__item" ng-repeat="product in productList | filter: sellerName">
+                                <div class="product__item__pic set-bg" data-setbg="img/product/{{product.productId}}.jpg">
                                     <ul class="product__item__pic__hover">
                                         <li><a href="#"><i class="fa fa-heart"></i></a></li>
                                         <li><a href="#"><i class="fa fa-retweet"></i></a></li>
@@ -563,8 +572,9 @@
                                     </ul>
                                 </div>
                                 <div class="product__item__text">
-                                    <h6><a href="#">Crab Pool Security</a></h6>
-                                    <h5>$30.00</h5>
+                                    <h6><a href="#">{{product.productName}}</a></h6>
+                                    <h5>{{product.unitPrice}}</h5>
+                                    <h5>{{product.sellerName}}</h5>
                                 </div>
                             </div>
                         </div>
